feat: Inclusion of configs in properties, entities and jpa mappings and persistence interfaces.

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files
 *.jar
 *.war
 *.nar
@@ -22,3 +22,28 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Exclude IntelliJ configuration folder
+.idea/
+
+# Exclude IntelliJ module files
+*.iml
+
+# Exclude build and class folders
+target/
+bin/
+out/
+
+# Exclude log files
+*.log
+
+# Exclude Maven build files
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Exclude OS temporary files
+.DS_Store
+Thumbs.db
