--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=wefin-srm-market-api
+# Server Port Configuration
+server.port=8080
+
+# H2 Database Configuration
+# Enable H2 web console
+spring.h2.console.enabled=true
+# Set the path for the H2 console
+spring.h2.console.path=/h2-console
+
+# Datasource Configuration for in-memory H2
+spring.datasource.url=jdbc:h2:mem:wefindb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# JPA Configuration
+# Show SQL statements in the log for debugging
+spring.jpa.show-sql=true
+# Let Hibernate generate the DDL (Data Definition Language )
+spring.jpa.hibernate.ddl-auto=update
+# Specify the H2 dialect for Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
