--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 # Specify the H2 dialect for Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.defer-datasource-initialization=true
