--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ server.port=8080
 spring.h2.console.enabled=true
 # Set the path for the H2 console
 spring.h2.console.path=/h2-console
+# Pay attention: only in development environment.
+spring.h2.console.settings.web-allow-others=true
 
 # Datasource Configuration for in-memory H2
 spring.datasource.url=jdbc:h2:mem:wefindb
